tests/test_assets/semantic/invalid/strings/assignment_size.cog
// semantic error at line 4: string literal requires destination array size 6, got 4
// 1 semantic error generated.

test::() -> void {
    value: u8[4] = "abc";

    value = "hello";
}