tests/test_assets/semantic/invalid/strings/assignment_size.expected
semantic error at line 7: string literal requires destination array size 6, got 4
1 semantic error generated.
